--- a/inner.html
+++ b/inner.html
@@ -9,6 +9,7 @@
             color:blue;
             border:2px solid black;
         }
+        backgrond color yallow
     </style>
 </head>
 <body>
